--- a/build.gradle
+++ b/build.gradle
@@ -3,46 +3,69 @@ plugins {
     id 'java'
 }
 
-apply plugin: 'io.spring.dependency-management'
-
-group = 'com.ycbbcy'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '12'
-
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
 }
 
-repositories {
-    maven {
-        url: 'http://maven.aliyun.com/nexus/content/groups/public/'
-    }
-    mavenCentral()
-}
-
-ext {
-    set('springBootAdminVersion', '2.1.4')
-}
-
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'de.codecentric:spring-boot-admin-starter-client'
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    // https://mvnrepository.com/artifact/com.alibaba/fastjson
-    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.57'
-
+    runtimeOnly(
+            'org.springframework.boot:spring-boot-devtools'
+    )
+    implementation(
+            'org.springframework.boot:spring-boot-starter-actuator',
+            'de.codecentric:spring-boot-admin-starter-client'
+    )
+    compile(
+            project(':web')
+    )
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'org.springframework.boot'
+
+    sourceCompatibility = '12'
+    targetCompatibility = '12'
+
+    version = '0.0.1-SNAPSHOT'
+    group 'com.ycbbcy'
+
+
+    repositories {
+        maven {
+            url = 'http://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        mavenCentral()
+    }
+
+    ext {
+        set('springBootAdminVersion', '2.1.4')
+    }
+
+    dependencies {
+        compileOnly(
+                'org.projectlombok:lombok'
+        )
+        compile(
+                'org.springframework.boot:spring-boot-starter-aop',
+                'org.springframework.boot:spring-boot-starter-web',
+                group: 'com.alibaba', name: 'fastjson', version: '1.2.57'
+        )
+        testCompile(
+                'org.springframework.boot:spring-boot-starter-test'
+        )
+        annotationProcessor(
+                'org.springframework.boot:spring-boot-configuration-processor',
+                'org.projectlombok:lombok'
+        )
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+        }
     }
 }
